# rust-status-message

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  .travis.yml  Cargo.toml  README-Gitpod.md  README-Windows.md  README.md  ava.config.cjs  build.sh  package-lock.json  package.json  test.js
.cargo/: config
.github/scripts/: readme.sh
.github/workflows/: readme.yml  tests.yml
frontend/: App.js  config.js  global.scss  index.html  index.js
frontend/components/: Form.jsx
integration-tests/js/: main.ava.ts
integration-tests/rs/: Cargo.toml
integration-tests/rs/src/: null.rs  set.rs  statuses.rs  tests.rs
integration-tests/ts/: main.ava.ts
res/: status_message.wasm
src/: event.rs  lib.rs
tests-ava/: ava.config.cjs  ava.testnet.config.cjs  package.json  tsconfig.json
tests-ava/__tests__/: main.ava.ts
tests-workspaces/: Cargo.toml
tests-workspaces/src/: lib.rs
